--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+DB_NAME=
+DB_USER=postgres
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=5432
+DB_SSLMODE=
+
+TABLE_CONCENTRADOR_GPS=
+TABLE_GEOCERCAS=
+TABLE_RUTAS=
+TABLE_CATEGORIZACION_GPS=
