zona_roja cambios en la tabla de preeventos, y modelo general de datos para eventos

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,11 @@ DB_HOST=
 DB_PORT=5432
 DB_SSLMODE=
 
-TABLE_CONCENTRADOR_GPS=
-TABLE_GEOCERCAS=
-TABLE_RUTAS=
-TABLE_CATEGORIZACION_GPS=
+CONCENTRADOR_GPS=
+GEOCERCAS=
+RUTAS=
+CATEGORIZACION_GPS=
+PREEVENTOS_ZONA_ROJA=
+PREEVENTOS_SOBREESTADIA=
+PREEVENTOS_DET_NO_AUTORIZADA=
+PREEVENTOS_EX_VELOCIDAD=
