--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ CONCENTRADOR_GPS=
 GEOCERCAS=
 RUTAS=
 CATEGORIZACION_GPS=
-PREEVENTOS_ZONA_ROJA=
-PREEVENTOS_SOBREESTADIA=
-PREEVENTOS_DET_NO_AUTORIZADA=
-PREEVENTOS_EX_VELOCIDAD=
+ZONA_ROJA=
+SOBREESTADIA=
+DET_NO_AUTORIZADA=
+EX_VELOCIDAD=
